--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.2",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mailgun-js": "^0.22.0",
     "mongoose": "^6.1.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
