--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mailgun-js": "^0.22.0",
     "mongoose": "^6.1.3",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "twilio": "^3.72.0"
   }
 }
